--- a/qrGEN.html
+++ b/qrGEN.html
@@ -101,6 +101,12 @@
 
         @media (max-width: 480px) {
 
+
+            h1 {
+                font-size: 40px;
+
+            }
+
             body {
 
                 scale: 0.9;
