--- a/MOS WEB.html
+++ b/MOS WEB.html
@@ -36,6 +36,7 @@
             margin: 20px;
             font-size: 26px;
             padding: 10px;
+            border: solid 2px #2bae66  ;
         }
 
         .but1 {
@@ -75,13 +76,14 @@
             border-radius: 30px;
             padding: 10px;
             margin-top: 50px;
+            border: solid 2px #2bae66  ;
         }
 
         h1 {
             text-align: center;
             font-size: 60px;
             font-family: 'Courier New', Courier, monospace;
-            color: #fff;
+            color: #2bae66;
             position: absolute;
             width: 100%;
             top: 35px;
@@ -136,7 +138,7 @@
             * {
                 padding: 0px;
                 margin: 0px;
-                overflow: hidden;
+
             }
 
 
@@ -147,17 +149,19 @@
                 width: 100%;
                 position: absolute;
                 top: 20px;
+                color: #2bae66;
             }
 
             body {
                 position: fixed;
                 width: 100%;
                 height: 100%;
-                overflow: hidden;
-                touch-action: none;
+
+
             }
 
             textarea {
+                border: solid 2px #2bae66  ;
                 max-width: 360px;
                 max-height: 80px;
                 min-width: 360px;
@@ -191,7 +195,7 @@
                 font-size: 24px;
                 margin-top: 20px;
                 padding: 8px;
-
+                border: solid 2px #2bae66;
             }
 
             .text1,
